spinner 동작 추가했음

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">WebCrawler</string>
+
+    <string name="txt_board1">취업공지</string>
+    <string name="txt_board2">특강공지</string>
+
     <string name="prompt_board">공지사항 선택</string>
     <string-array name="arr_board">
         <item>KU 행정실 공지사항</item>
